--- a/css/login.css
+++ b/css/login.css
@@ -51,14 +51,17 @@ input[type=text],
 input[type=password],
 input[type=email]
 {
+	  border-radius: 5px;
+	
   width: 300px;
   padding: 10px;
   height: 20px;
-  -webkit-box-shadow: 1px 1px 1px 1px #cccccc;
-  -moz-box-shadow: 1px 1px 1px 1px #cccccc;
-    box-shadow: 1px 1px 1px 1px #cccccc;
+-webkit-box-shadow: 2px 1px 6px 1px rgba(140,140,140,0);
+-moz-box-shadow: 2px 1px 6px 1px rgba(140,140,140,0);
+box-shadow: 2px 1px 6px 1px rgba(140,140,140,0);
+ border: 2px solid #cccccc;
     outline: none;
-
+ background-color:none important; 
 }
 input[type=text]:focus,
 input[type=password]:focus,
@@ -72,7 +75,13 @@ input[type=email]:focus
   border-radius: 5px;
 
 }
-
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-transition: "color 9999s ease-out, background-color 9999s ease-out";
+    -webkit-transition-delay: 9999s;
+}
 input[type=submit]
 {
   box-sizing:content-box;
