--- a/css/style.css
+++ b/css/style.css
@@ -117,17 +117,23 @@ a:hover .zakladki{
    text-align: center;
    margin-top:80px;
    
+   
+    transition-duration: 4s;
+    margin: 0 auto;
+    display: block;
+   
  }
 
  .img_size
  {
+ transition-duration: 2s;
+ 
     height: 500px;
     width: 700px;
 	position:absolute;
 	top:0;
 	left:0;
 	z-index:2;
-
 
  }
  
@@ -140,7 +146,12 @@ a:hover .zakladki{
 } 
  .img_size:hover
  {
- opacity:0.3;
+ transition-delay: 1000ms;
+ transition-duration: 5s;
+ transform: scale(1.3);
+ -webkit-transform: scale(1.3);
+ -moz-transform: scale(1.3);
+  z-index: 100;
  }
 .TestName
 {
@@ -150,6 +161,10 @@ a:hover .zakladki{
 	top:0;
 	left:0;
 	font-family: 'Lato', sans-serif;
+	    overflow: hidden;
+    padding: 0;
+
+border:1px solid #000;
 
 	
 }
